# mcp-grimoire

./: .gitattributes  .gitignore  .prettierignore  .secretlintignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING-LOCAL.md  eslint.config.mjs  package.json  pnpm-lock.yaml  test-interactive.sh  tsconfig.json  vitest.config.ts  vitest.container.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit
.test-grimoire/api-key-http/: weather-api-bearer-http.spell.yaml
.test-grimoire/api-key-http-header/: database-query-header.spell.yaml
.test-grimoire/api-key-sse/: news-aggregator-bearer-sse.spell.yaml  news-aggregator-header-sse.spell.yaml
.test-grimoire/concurrency/: conc-env-1.spell.yaml  (+5 more)
docs/: ENV-MANAGER-CODE-REVIEW.md  GATEWAY-INTEGRATION-TEST-PLAN-V2.md  GATEWAY-INTEGRATION-TEST-PLAN.md  GATEWAY-TEST-STRATEGY-SUMMARY.md  GRIMOIRE-PATH-CONFIGURATION-ANALYSIS.md  SPELL-NAME-MAPPING.md  TEST-IMPROVEMENT-PLAN.md  TEST-SERVER-MAPPING.md  TEST-SERVER-TOOL-MAPPING.md  architecture.md  authentication-guide.md  integration-test-strategy.md  intent-resolution-solution.md  mcp-server-spawning-clarification.md  oauth2-client-credentials-implementation-plan.md  power-gateway-design-doc.md  remote-mcp-servers.md  turn-based-lifecycle-explained.md
src/: cli.ts  index.ts  pre-commit-test-all-violations.ts
tests/fastmcp/: .gitignore  README.md  main.py  pyproject.toml  run_all_servers.py
tests/fastmcp/scripts/: start-api-key-http.sh  start-api-key-sse.sh  start-basic-auth-http.sh  start-basic-auth-sse.sh  start-no-auth-http.sh  start-no-auth-sse.sh  start-oauth2-http.sh  start-oauth2-provider.sh  start-security-keys-http.sh  start-security-keys-sse.sh  stop-server.sh
tests/fastmcp/src/: __init__.py
tests/fastmcp/src/clients/: __init__.py  api_key_client.py  basic_auth_client.py  oauth2_client.py  security_keys_client.py
tests/fastmcp/src/common/: __init__.py  auth_providers.py  client_logging.py  constants.py  logging.py  middleware.py  tools.py
tests/fastmcp/src/servers/: __init__.py
tests/fastmcp/src/servers/api_key/: __init__.py  http_server.py  sse_server.py
tests/fastmcp/src/servers/basic_auth/: __init__.py  http_server.py  sse_server.py
tests/fastmcp/src/servers/no_auth/: __init__.py  http_server.py  sse_server.py
tests/fastmcp/src/servers/oauth2/: __init__.py  http_server.py  provider.py
tests/fastmcp/src/servers/security_keys/: __init__.py  http_server.py  sse_server.py
tests/fastmcp/src/tests/: conftest.py  test_integration.py
(+199 files in other folders)
